--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,27 +22,9 @@ env:
   DOCKER_BUILDKIT: 1
 
 jobs:
-  setup:
-    name: Setup Environment
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-config: .github/buildkit.toml
-      - name: Login to Docker
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
-
   pre_check:
     name: Pre Checks
     if: ${{ github.event.inputs.buildOnly != 'true' }}
-    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Repo Check
@@ -56,18 +38,25 @@ jobs:
           exit 0
 
   build_base:
-    name: Build Base Image
+    name: Build base image
     if: ${{ github.event.inputs.buildOnly != 'true' }}
     needs: pre_check
     runs-on: ubuntu-latest
     steps:
       - name: Free Disk-Space
-        run: |
-          df -h
-          sudo apt-get clean
-          docker system prune -a -f
-          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
-          df -h
+        run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config: .github/buildkit.toml
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
@@ -76,21 +65,21 @@ jobs:
           echo "rawname=${IMG/ /-}" >> $GITHUB_OUTPUT
       - name: Stop Commands
         run: T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
-      - name: Build and Push Base Image
+      - name: Build target base image
         uses: docker/build-push-action@v5
         with:
           context: images/base
-          pull: false  # Avoid pulling unless needed
+          pull: true
           push: true
           provenance: false
           tags: ${{ steps.imagename.outputs.name }}:latest
           cache-to: type=registry,mode=max,ref=${{ steps.imagename.outputs.name }}:cache
           cache-from: type=registry,ref=${{ steps.imagename.outputs.name }}:cache
-      - name: Get Download Cache Key
+      - name: Get download cache key
         id: dl_cache
         run: |
           echo "dltagname=$(./util/get_dl_cache_tag.sh)" >> $GITHUB_OUTPUT
-      - name: Cache Downloads
+      - name: Cache
         uses: actions/cache@v4
         with:
           path: .cache/downloads
@@ -114,7 +103,7 @@ jobs:
           untagged_only: true
 
   build_target_bases:
-    name: Build Target Base Images
+    name: Build target base image
     if: ${{ github.event.inputs.buildOnly != 'true' }}
     needs: build_base
     runs-on: ubuntu-latest
@@ -124,12 +113,19 @@ jobs:
         target: [win64,win32]
     steps:
       - name: Free Disk-Space
-        run: |
-          df -h
-          sudo apt-get clean
-          docker system prune -a -f
-          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
-          df -h
+        run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config: .github/buildkit.toml
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
@@ -139,11 +135,11 @@ jobs:
           echo "gh_repo=${GITHUB_REPOSITORY,,}" >> $GITHUB_OUTPUT
       - name: Stop Commands
         run: T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
-      - name: Build and Push Target Base Image
+      - name: Build target base image
         uses: docker/build-push-action@v5
         with:
           context: images/base-${{ matrix.target }}
-          pull: false  # Avoid pulling unless needed
+          pull: true
           push: true
           provenance: false
           tags: ${{ steps.imagename.outputs.name }}:latest
@@ -163,7 +159,7 @@ jobs:
           untagged_only: true
 
   build_targets:
-    name: Build Target-Variant Images
+    name: Build target-variant image
     if: ${{ github.event.inputs.buildOnly != 'true' }}
     needs: build_target_bases
     runs-on: ubuntu-latest
@@ -174,19 +170,26 @@ jobs:
         variant: [gpl-shared 7.0]
     steps:
       - name: Free Disk-Space
-        run: |
-          df -h
-          sudo apt-get clean
-          docker system prune -a -f
-          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
-          df -h
+        run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-config: .github/buildkit.toml
+      - name: Login to Docker
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
       - name: Image Name
         id: imagename
         run: |
           IMG="${GITHUB_REPOSITORY,,}/${{ matrix.target }}-${{ matrix.variant }}"
           echo "name=ghcr.io/${IMG/ /-}" >> $GITHUB_OUTPUT
           echo "rawname=${IMG/ /-}" >> $GITHUB_OUTPUT
-      - name: Get Download Cache Key
+      - name: Get download cache key
         id: dl_cache
         run: |
           echo "dltagname=$(./util/get_dl_cache_tag.sh)" >> $GITHUB_OUTPUT
@@ -194,17 +197,17 @@ jobs:
         run: T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
       - name: Generate Dockerfile
         run: ./generate.sh ${{ matrix.target }} ${{ matrix.variant }}
-      - name: Restore Download Cache
-        uses: actions/cache@v4
+      - name: Cache
+        uses: actions/cache/restore@v4
         with:
           path: .cache/downloads
           key: download-cache-${{ steps.dl_cache.outputs.dltagname }}
           fail-on-cache-miss: true
-      - name: Build and Push Target-Variant Image
+      - name: Build target base image
         uses: docker/build-push-action@v5
         with:
           context: .
-          pull: false  # Avoid pulling unless needed
+          pull: true
           push: true
           provenance: false
           tags: ${{ steps.imagename.outputs.name }}:latest
@@ -222,7 +225,7 @@ jobs:
           untagged_only: true
 
   build_ffmpeg:
-    name: Build FFmpeg
+    name: Build ffmpeg
     if: ${{ ( github.event.inputs.buildOnly == 'true' && !cancelled() ) || success() }}
     needs: build_targets
     runs-on: ubuntu-latest
@@ -233,12 +236,7 @@ jobs:
         variant: [gpl-shared 7.0]
     steps:
       - name: Free Disk-Space
-        run: |
-          df -h
-          sudo apt-get clean
-          docker system prune -a -f
-          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
-          df -h
+        run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
       - name: Checkout
         uses: actions/checkout@v4
       - name: Login to Docker
@@ -247,16 +245,16 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-      - name: Build FFmpeg
+      - name: Build ffmpeg
         run: |
           T="$(echo -n ${{ github.token }} | sha256sum | head -c 64)" && echo -e "::add-mask::${T}\n::stop-commands::${T}"
           ./build.sh ${{ matrix.target }} ${{ matrix.variant }}
-      - name: Replace Spaces in String
+      - name: Replace spaces in string
         id: strs
         run: |
           SLUG="${{ matrix.target }}-${{ matrix.variant }}"
           echo "artifact_slug=${SLUG// /-}" >> $GITHUB_OUTPUT
-      - name: Upload Artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ffmpeg-${{ steps.strs.outputs.artifact_slug }}
@@ -264,27 +262,22 @@ jobs:
           path: artifacts/*
 
   publish_release:
-    name: Publish Release
+    name: Publish release
     if: ${{ !cancelled() && github.event.inputs.doRelease == 'true' && needs.build_ffmpeg.result == 'success' }}
     needs: build_ffmpeg
     runs-on: ubuntu-latest
     steps:
       - name: Free Disk-Space
-        run: |
-          df -h
-          sudo apt-get clean
-          docker system prune -a -f
-          sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
-          df -h
+        run: df -h && sudo apt-get clean && docker system prune -a -f && sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc && df -h
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Download Artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           pattern: ffmpeg-*
           merge-multiple: true
           path: artifacts
-      - name: Create Release
+      - name: Create release
         id: create_release
         run: |
           set -xe
@@ -314,7 +307,7 @@ jobs:
         run: ./util/update_wiki.sh artifacts ${{ steps.create_release.outputs.tag_name }}
         env:
           GITHUB_TOKEN: ${{ github.token }}
-      - name: Prune Old Releases
+      - name: Prune old releases
         run: ./util/prunetags.sh
         env:
           GITHUB_TOKEN: ${{ github.token }}
